--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -6,6 +6,7 @@
 
     
     .section-01 {  
+        margin-top: 150px;
         padding-right: 10px;
         padding-left: 10px;
         position: relative;
@@ -15,8 +16,8 @@
             font-size: 24px;
             font-weight: 600;
             max-width: 600px;
-            margin: 10px 0 40px; 
-            height: 40px;  
+            margin: 70px 0 40px; 
+            height: 31px;  
             overflow: hidden;
         }
 
@@ -38,6 +39,8 @@
         }
     }
 
+    /* ----- Project Cards ----- */
+
     .project-wrapper {    
         position: relative;
 
@@ -45,7 +48,7 @@
             width: 100%;
             margin: 0 auto;
             mix-blend-mode: screen;
-
+            position: relative;
             
            .swift-feature   {
                 border-radius: 3px;  
@@ -53,7 +56,7 @@
                 top: 0;
                 left: 0;
                 width: 100%;
-                height: 60vh;
+                height: 75vh;
                 object-fit: cover;
                 object-position: center center;
  
@@ -61,9 +64,9 @@
 
         }
 
-        .swift-info {       
-                
-
+        .swift-info {      
+            
+            /* --- Project Title --- */
             .featured-title {
                 display: block;
                 position: absolute;
@@ -74,6 +77,18 @@
                 margin: 30px 30px;
             }
 
+            h4 {
+                margin-bottom: 10px;
+                font-size: 13px;
+                color: rgb(100, 255, 218);
+            }
+
+            h5 {
+                font-size: 23px;
+            }
+
+            /* --- Project Description --- */
+
             .swift-description {
                 display: block;
                 position: absolute;
@@ -82,12 +97,41 @@
             color: white;
                 font-size: 18px;
                 text-align: right;
-                margin: 60px 30px;
+                margin: 70px 30px;
             }
 
-    
+             /* --- Project Technologies --- */
+
+
+            .swift-tech,
+            .featured-links {
+                font-size: 30px;
+            }
+
+            .swift-tech {
+                font-size: 40px;
+            }
+
+            .swift-tech {
+                 margin-top: 50px;
+                margin-bottom: 25px;
+                display: flex;
+                justify-content: space-evenly;
+                text-align: right;                 
+            }
+
+            .featured-links {
+                margin-top: 50px;                
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                    padding-left: 20px;
+                }
+            }
+
         }
-        .overlay {
+        .swift-overlay {
             background-color: rgba(15, 32, 28, 0.637);
             height: 100%;
             display: block;
@@ -98,21 +142,182 @@
             bottom: 0;
 
         }
+
+        /* ---- Portfolio Card --- */
+        .portfolio-container {
+            position: relative;
+
+            .port-thumbnail {
+                width: 100%;
+                margin: 0 auto;
+                mix-blend-mode: screen;
+                position: relative;
+                
+            .port-feature   {
+                    border-radius: 3px;  
+                    position: inherit !important; 
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 75vh;
+                    object-fit: cover;
+                    object-position: center center;
+    
+                }        
+
+            }
+
+            .port-info {      
+                
+            /* --- Project Title --- */           
+        
+                .featured-title {
+                    display: block;
+                    position: absolute;
+                    top: 0;
+                    color: $off-white;
+                    text-align: left;
+                    left: 0;
+                    margin: 30px 30px;
+                }
+
+                h4 {
+                    margin-bottom: 10px;
+                    font-size: 13px;
+                    color: rgb(100, 255, 218);
+                }
+
+                h5 {
+                    font-size: 23px;
+                }
+
+                /* --- Project Description --- */
+
+                .port-description {
+                    display: block;
+                    position: absolute;
+                    top: 50px;
+                /*  color: rgb(168, 178, 209); */
+                color: white;
+                    font-size: 18px;
+                    text-align: left;
+                    margin: 70px 30px;
+                }
+
+                /* --- Project Technologies --- */
+
+                .port-tech,
+                .featured-links {
+                    font-size: 30px;
+                }
+
+                .port-tech {
+                    font-size: 40px;
+                }
+
+                .port-tech {
+                    margin-top: 50px;
+                    margin-bottom: 25px;
+                    display: flex;
+                    justify-content: space-evenly;
+                    text-align: left;
+                }
+
+                .featured-links {
+                    margin-top: 50px;                
+
+                    a {
+                        text-decoration: none;
+                        color: white;
+                        padding-right: 20px;
+                    }
+                }
+
+            }
+            .port-overlay {
+                background-color: rgba(15, 32, 28, 0.637);
+                height: 100%;
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+
+            }
+        }
+
     }
+
+    /*------- Side Contact ------ */
 
     .fixed-contact {
         position: fixed;
         top: 70%;
-        right: -48px;
+        right: -58px;
         transform: rotate(90deg);
         font-weight: 700;
         font-size: 15px;
         color: $off-white;
         letter-spacing: 1.5px;
         z-index: 8;
+    
+
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            height: 155px;
+            width: 1px;
+            transform: rotate(90deg);
+            background-color: rgb(187, 193, 206);
+            right: -100px;
+            bottom: -67px;
+        }
+    }
+    .fixed-contact {
+        display: none;
     }
 
-    .fixed-contact {
+    /*------- Side Social Media ------ */
+
+    .fixed-social {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        top: 70%;
+        left: 0;
+        font-weight: 700;
+        font-size: 25px;
+        color: $off-white;
+        letter-spacing: 1.5px;
+        z-index: 8;
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            margin-left: 20px;
+            a {            
+                color: white;
+            }
+      
+        }
+        
+        .social-media:after {
+            content: "";
+            display: block;
+            position: absolute;
+            height: 180px;
+            width: 1px;
+            transform: rotate(-180deg);            
+            background-color: rgb(187, 193, 206);
+            right: 11px;
+            bottom: -200px;
+        }           
+    }
+
+    .fixed-social {
         display: none;
     }
 
@@ -120,28 +325,45 @@
 }
 
  @media (min-width: 605px) {
+
     .works-showcase {
-
-        
         .section-01 {
-            width: 100%;
-            margin: 0 auto;
-            padding-right: 20px;
-            padding-left: 20px;
+            .swift-container {
+                    
+                .project-thumbnail {
+                    width: 400px;
+                    display: block;
+                    margin: 0;
+                }
 
-        }
-        .project-wrapper {
-       
-            .project-thumbnail {
-                width: 100%;
-                height: auto; 
+                .swift-description p{
+                    background-color: rgb(23, 42, 69);
+                    padding: 30px;
+                    margin-top: 80px;
+                }
 
-        
+                .swift-tech {
+                    display: block;
+                    margin-bottom: 70px;
+
+                    i {
+                       text-align: right;
+                       margin-left: 45px;
+                     
+                    }
+                }
+
+
+
+
             }
 
-        }
+          
 
+            
+        }   
     }
+
 } 
 
 @media (min-width: 775px) {
@@ -157,7 +379,10 @@
     .works-showcase{      
         .fixed-contact {
             display: block;
-        }
-        
+        }        
+        .fixed-social {
+            display: block;
+        }        
     }
+
 }
