--- a/src/css/media-queries/_media-queries.scss
+++ b/src/css/media-queries/_media-queries.scss
@@ -3,10 +3,19 @@
     height: 100%;
 
     @media(min-width: 605px) {
-        width: 768px;
+         width: 768px; 
     }
-    @media(min-width: 1280px) {
+
+    @media(min-width: 905px) {
+        /* width: 768px;   */
+        width: 100%;
+        margin-left: 60px;
+        margin-right: 60px;
+   }
+
+    @media(min-width: 1080px) {
         width: 976px;
-        min-width: 976px;
+        min-width: 976px; 
+        margin: 0 auto;
     }
 }
