--- a/src/css/header/_header.scss
+++ b/src/css/header/_header.scss
@@ -4,7 +4,8 @@ header {
     position: absolute;
     top: 0;
     z-index: 10;
-
+    font-family: 'Roboto';
+    font-weight: 400;
 
     .inner-header {
         display:  flex;
