--- a/src/css/media-queries/_media-queries.scss
+++ b/src/css/media-queries/_media-queries.scss
@@ -9,13 +9,16 @@
     @media(min-width: 905px) {
         /* width: 768px;   */
         width: 100%;
-        margin-left: 60px;
-        margin-right: 60px;
+        margin-left: 70px;
+        margin-right: 70px;
+       
    }
 
-    @media(min-width: 1080px) {
-        width: 976px;
-        min-width: 976px; 
+    @media(min-width: 1280px) {
+        /* width: 976px; */
+        width: 1150px;
+        margin-left: 75px;
+        margin-right: 75px;
         margin: 0 auto;
     }
 }
